--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "lnexplorer",
+  "name": "lnexplorer-bynd",
   "version": "1.0.0",
-  "description": "",
+  "description": "Beyondcoin Lightning Network Explorer",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chemicstry/recksplorer.git"
+    "url": "https://github.com/beyondcoin-project/recksplorer.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
